# dtaidistance

./: .gitignore  .readthedocs.yml  AUTHORS  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest-nolibs.ini  pytest-noviz.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/figures/: Makefile  explain.py
docs/modules/: clustering.rst  dtw.rst  dtw_barycenter.rst  dtw_ndim.rst  dtw_visualisation.rst  ed.rst  explain.rst  preprocessing.rst  subsequence.rst
docs/usage/: advanced.rst  changelist.rst  clustering.rst  dtw.rst  ed.rst  explain.rst  installation.rst  openmp.rst  sequence.rst  similarity.rst  subsequence.rst  subsequences.rst
dtaidistance/: __init__.py  alignment.py  clustering.py  dp.py  dtaidistancec.pxd  dtaidistancec_dtw.pxd  dtaidistancec_dtw_omp.pxd  dtaidistancec_dtw_search.pxd  dtaidistancec_ed.pxd  dtaidistancec_globals.pxd  dtaidistancec_omp.pxd  dtw.py  dtw2d.py  dtw_barycenter.py  dtw_c.pyx  dtw_cc.pxd  dtw_cc.pyx  dtw_cc_numpy.pyx  dtw_cc_omp.pyx  dtw_ndim.py  dtw_ndim_visualisation.py  dtw_np.pyx  dtw_numpy.py  dtw_search.py  dtw_search_cc.pyx  dtw_visualisation.py  dtw_weighted.py  dtwndim.py  ed.py  ed_cc.pyx  exceptions.py  innerdistance.py  preprocessing.py  setup.py  similarity.py  util.py  util_numpy.py  util_numpy_cc.pyx
dtaidistance/clustering/: __init__.py  hierarchical.py  kmeans.py  medoids.py
dtaidistance/connectors/: sktime.py
dtaidistance/jinja/: Makefile  dtaidistancec_globals.jinja.pxd  dtw_cc.jinja.pxd  dtw_cc.jinja.pyx  dtw_cc_dba.jinja.pyx  dtw_cc_distancematrix.jinja.pyx  dtw_cc_omp.jinja.pyx  dtw_cc_warpingpath.jinja.pyx  dtw_cc_warpingpaths.jinja.pyx  ed_cc.jinja.pyx  generate.py
dtaidistance/subsequence/: __init__.py  dtw.py  localconcurrences.py  subsequencealignment.py  subsequencesearch.py
dtaidistance/symbolization/: alignment.py
examples/: hierarchical_clustering.py
src/DTAIDistanceC/: Makefile  readme.md
src/dtaidistance/: __init__.py  dtaidistancec_dtw.pxd  dtaidistancec_dtw_omp.pxd  dtaidistancec_globals.pxd  dtaidistancec_loco.pxd  dtw.py  dtw_barycenter.py  dtw_cc.pxd  dtw_cc.pyx  dtw_ndim.py  dtw_visualisation.py  ed.py  ed_cc.pyx  exceptions.py  innerdistance.py  loco_cc.pxd  loco_cc.pyx  msm.py  postprocessing.py  preprocessing.py  util.py  util_numpy.py
tests/: test_alignment.py  test_barycenter.py  test_benchmark.py  test_best_path.py  test_bugs.py  test_bugsvis.py  test_clustering.py  test_cython.py  test_dtw.py  test_dtw2d.py  test_dtw_weighted.py  test_dtw_weighted_dt.py  test_ed.py  test_explainpair.py  test_float.py  test_keogh.py  test_penalty.py  test_preprocessing.py  test_purec.py  test_search.py  test_subsequence.py  test_symbolization.py  test_warping.py
tests/rsrc/: EEGRat_10_1000.txt  LICENSE  Trace_TRAIN.txt  blosum62.txt  pat1.txt  substitution.txt  (+1 more)
util/: check_installation.py
(+87 files in other folders)
