[metadata]
license_file = LICENSE
description = Distance measures for time series (Dynamic Time Warping)
name = dtaidistance
version = attr: dtaidistance.__version__
author = Wannes Meert
url = https://github.com/wannesm/dtaidistance
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
keywords = dtw, time series, dynamic time warping, distance
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
